Add email property to users
Add an email property to the Ohm model for users, retrieve the email
property from the oauth hash when creating new users.

Also add email properties when seeding the database and when running
tests.

There are no existing model tests, so I'm not adding them now.

--- a/db/users.yml
+++ b/db/users.yml
@@ -1,9 +1,13 @@
 - name: John McFoo
   uid:  'null|johnmcfoo'
+  email: 'jmcfoo@example.com'
 - name: Alice Wallace
   uid:  'null|alice'
+  email: 'awallace@example.com'
 - name: Bob Ablleton
   uid:  'null|bob'
+  email: 'bablleton@example.com'
 - name: Charlie O'Callaghan
   uid:  'null|charlie'
+  email: 'cocallaghan@example.com'
 
